subscribe section added

--- a/src/main.css
+++ b/src/main.css
@@ -577,6 +577,31 @@ h2 {
     bottom: 110px;
     transition: 1s ease-in-out;
   }
+  .subscribe {
+    background: var(--SecondaryColor);
+  }
+  .subscribe .sectionContainer {
+    text-align: center;
+  }
+  .subscribe .sectionContainer .inputDiv {
+    margin-top: 1rem;
+    flex-direction: column;
+    background: var(--whiteColor);
+    border-radius: 1rem;
+  }
+  .subscribe .sectionContainer .inputDiv input {
+    border: none;
+    outline: none;
+    background: transparent;
+    padding: 1rem 0.5rem;
+  }
+  .subscribe .sectionContainer .inputDiv input:placeholder {
+    font-size: 13px;
+    opacity: 0.5;
+  }
+  .subscribe .sectionContainer .inputDiv .btn {
+    width: 80%;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
